visibility fix

--- a/scootsFinalProject/styles/site-plan.css
+++ b/scootsFinalProject/styles/site-plan.css
@@ -1,13 +1,13 @@
 body {
-    background-color: #fff;
-    color: ;
+    background-color: #333;
+    color: #CDCCE8;
 }
 
 header {
     display: grid;
     grid-template-columns: 1fr;
-    background-color: ;
-    color: ;
+    background-color: #CDCCE8;
+    color: #333;
     padding: 20px;
     text-align: center;
 }
@@ -59,8 +59,9 @@ ul {
 .black-color-card {
     background-color:#333;
     color: #CDCCE8;
+    border: 2px solid #AEFFDE;
     border-radius: 10px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 10px #CDCCE8;
     padding: 20px;
     margin-bottom: 20px;
 }
@@ -76,10 +77,12 @@ ul {
 
 .primary-font {
     font-family:'Roboto', sans-serif;
+    font-weight: 400;
 }
 
 .secondary-font {
     font-family:'Lora', serif;
+    font-weight: 400;
 }
 
 img {
@@ -89,8 +92,8 @@ img {
 }
 
 footer {
-    background-color: #A4E48B;
-    color: #5D0909;
+    background-color: #CDCCE8;
+    color: #333;
     padding: 20px;
     text-align: center;
 }
